fixed: readonly text fields with overflowing text have invisible overflow on printouts,
https://github.com/OpenClinica/enketo-express-oc/issues/312

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -294,9 +294,6 @@ $media-margin: 10px;
     input[readonly].empty,
     select[readonly].empty,
     textarea[readonly].empty,
-    .print-input-text {
-        display: none;
-    }
 
     strong {
         font-size: inherit;
